# casino-player

./: CMakeLists.txt  README-en.md  README-fr.md  README.md  casino-simulator.py  casino_player.pyi  cleanup.py  rebuild.py  roulette-player.c  roulette_table.py  setup.cfg  setup.py  simul_1.py  simul_2.py  simul_3.py  test_memory.py
casino/: player.py  table.py
casino/strategies/: adaptive_distribution.py  base.py  column_pattern.py  corner_momentum.py  dalembert.py  dynamic_sectors.py  enhanced_zero_trend.py  fibonacci.py  hot_cold_sectors.py  hybrid_martingale.py  james_bond.py  labouchere.py  martingale.py  multi_pattern.py  opposite_sectors.py  paroli.py  progressive_coverage.py  sector_chain.py  sequence.py  split_pattern.py  thirds_coverage.py  wheel_sections.py  zero_always.py  zero_and_half.py  zero_neighbours.py  zero_simple.py  zero_timeout.py  zero_trend.py
